# Voice-Assistant

./: README.md  docker-compose.yml
backend/: Dockerfile  apimain.py  main.py  pyproject.toml  requirements.txt
backend/modules/: chat.py  stt.py  tts.py
frontend/: Dockerfile  index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  constant.js  index.css
frontend/src/components/: AnimateWaveform.jsx  SpeakingAnimation.jsx  VoiceAssistant.jsx
